--- a/jobmekanik.html
+++ b/jobmekanik.html
@@ -10,13 +10,13 @@
 		<!-- MY CSS -->
 		<link rel="stylesheet" href="style.css" />
 
-		<title>Maintanance Service | CV KIP</title>
+		<title>Maintanance Service | ADS GROUP</title>
 		<link href="gambar/LOGO KIP.jpg" rel="icon" sizes="180x180" />
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">CV.KALTIM INDAH PERMAI</a>
+				<a class="navbar-brand" href="#">ADS GROUP</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -26,17 +26,14 @@
 							<a class="nav-link active" aria-current="page" href="rentalan.html">Data Hm Rentalan</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" href="petani.html">Data Hm Petani</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" href="jobmekanik.html">Data Job Mekanik</a>
+							<a class="nav-link active" aria-current="page" href="jobmekanik.html">Data Job Mekanik</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 		<img id="gambar" src="gambar/repair.jpg" class="" alt="papale" />
-		<h1 id="judul" class="text-center text-dark">Job Harian Tim Mekanik</h1>
+		<h1 id="judul" class="text-center text-dark">Job Kelokasi Tim Mekanik</h1>
 		<div class="table-responsive">
 			<table id="Start" class="table caption-top table-bordered border-primary">
 				<thead class="update text-white">
@@ -44,8 +41,8 @@
 						<th scope="col">Tanggal</th>
 						<th scope="col">Unit</th>
 						<th scope="col">Lokasi</th>
-						<th scope="col">Pengerjaan</th>
-						<th scope="col">Qty</th>
+						<th scope="col" class="qty">Pengerjaan</th>
+						<th scope="col" class="qty">Qty</th>
 						<th scope="col">Mekanik</th>
 					</tr>
 				</thead>
@@ -56,66 +53,76 @@
 						<td>SEPAKU</td>
 						<td>
 							<li>Pompa hyd</li>
-							<li>Oli 10W</li>
+							<li>Oli 10w</li>
 						</td>
 						<td>
 							<li>1pcs</li>
 							<li>20liter</li>
 						</td>
-						<td>WAHYU FT DENI</td>
+						<td>Wahyu FT Deni</td>
 					</tr>
 					<tr>
 						<th scope="row">20/9/2021</th>
 						<td>SANY 215C/EX 28</td>
 						<td>SEPAKU</td>
 						<td>
-							<li>AKI 100 AMPER</li>
-							<li>TERMINAL AKi</li>
-							<li>KABEL PARALEL</li>
+							<li>Aki 100 amper</li>
+							<li>Terminal aki</li>
+							<li>Kabel paralel</li>
 						</td>
 						<td>
-							<li>2PCS</li>
-							<li>2SET</li>
-							<li>1PCS</li>
+							<li>2pcs</li>
+							<li>2pcs</li>
+							<li>1pcs</li>
 						</td>
-						<td>WAHYU FT DENI</td>
+						<td>Wahyu FT Deni</td>
 					</tr>
 					<tr>
 						<th scope="row">20/9/2021</th>
 						<td>SANY 215C/EX 47</td>
 						<td>JONGGON</td>
 						<td>
-							<li>OLI 15W-40</li>
-							<li>OIL FILTER</li>
-							<li>FILTER SOLAR ATAS</li>
-							<li>FILTER SOLAR SEPARATOR</li>
-							<li>FILTER SOLAR</li>
+							<li>Oli 15W-40</li>
+							<li>Oli Filter</li>
+							<li>Filter solar atas</li>
+							<li>Filter solar separator</li>
+							<li>Filter solar</li>
 						</td>
 						<td>
-							<li>25 LITER</li>
-							<li>1PCS</li>
-							<li>1PCS</li>
-							<li>1PCS</li>
-							<li>1PCS</li>
+							<li>25 liter</li>
+							<li>1pcs</li>
+							<li>1pcs</li>
+							<li>1pcs</li>
+							<li>1pcs</li>
 						</td>
-						<td>SUKIRNO FT HAMDAN</td>
+						<td>Sukirno FT Hamdan</td>
 					</tr>
 					<tr>
 						<th scope="row">20/9/2021</th>
 						<td>SANY 215C/EX 48</td>
 						<td>JONGGON</td>
 						<td>
-							<li>ADAPTER</li>
-							<li>KUKU BUCKET</li>
+							<li>Adapter</li>
+							<li>Kuku bucket</li>
 						</td>
 						<td>
 							<li>1pcs</li>
 							<li>1pcs</li>
 						</td>
-						<td>SUKIRNO FT HAMDAN</td>
+						<td>Sukirno FT Hamdan</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+		<!-- Optional JavaScript; choose one of the two! -->
+
+		<!-- Option 1: Bootstrap Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+		<!-- Option 2: Separate Popper and Bootstrap JS -->
+		<!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    -->
 	</body>
 </html>
