--- a/rentalan.html
+++ b/rentalan.html
@@ -10,13 +10,13 @@
 		<!-- MY CSS -->
 		<link rel="stylesheet" href="style.css" />
 
-		<title>Maintanance Service | CV KIP</title>
+		<title>Maintanance Service | ADS GROUP</title>
 		<link href="gambar/LOGO KIP.jpg" rel="icon" sizes="180x180" />
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">CV.KALTIM INDAH PERMAI</a>
+				<a class="navbar-brand" href="#">ADS GROUP</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -26,10 +26,7 @@
 							<a class="nav-link active" aria-current="page" href="rentalan.html">Data Hm Rentalan</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" href="petani.html">Data Hm Petani</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" href="jobmekanik.html">Data Job Mekanik</a>
+							<a class="nav-link active" aria-current="page" href="jobmekanik.html">Data Job Mekanik</a>
 						</li>
 					</ul>
 				</div>
@@ -56,33 +53,6 @@
 				<tbody>
 					<tr>
 						<th scope="row">1</th>
-						<td>EX 17</td>
-						<td>KOMATSU PC200</td>
-						<td>Gunung Menangis</td>
-						<td>8839</td>
-						<td>9000</td>
-						<td>161</td>
-					</tr>
-					<tr>
-						<th scope="row">2</th>
-						<td>EX 54</td>
-						<td>SANY 215C</td>
-						<td>Gunung Menangis</td>
-						<td>1971</td>
-						<td>2000</td>
-						<td class="bg-warning">29</td>
-					</tr>
-					<tr>
-						<th scope="row">3</th>
-						<td>EX 71</td>
-						<td>LIUGONG 920E</td>
-						<td>Gunung Menangis</td>
-						<td>325</td>
-						<td>500</td>
-						<td>175</td>
-					</tr>
-					<tr>
-						<th scope="row">4</th>
 						<td>EX 02</td>
 						<td>SANY 215C</td>
 						<td>SEBULU KM07</td>
@@ -91,169 +61,79 @@
 						<td>125</td>
 					</tr>
 					<tr>
-						<th scope="row">5</th>
-						<td>EX 53</td>
-						<td>SANY 215C</td>
-						<td>L4 KAYU MATI</td>
-						<td>2800</td>
-						<td>3000</td>
-						<td>200</td>
+						<th scope="row">2</th>
+						<td>EX 03</td>
+						<td>PC 400</td>
+						<td>--</td>
+						<td>22189</td>
+						<td>--</td>
+						<td>--</td>
 					</tr>
 					<tr>
-						<th scope="row">6</th>
-						<td>EX 58</td>
-						<td>SANY 365H-3</td>
-						<td>MELAK</td>
-						<td>4583</td>
-						<td>4750</td>
-						<td>167</td>
-					</tr>
-					<tr>
-						<th scope="row">7</th>
-						<td>EX 45</td>
-						<td>SANY 215C</td>
-						<td>DONDANG</td>
-						<td>2514</td>
-						<td>2750</td>
-						<td>236</td>
-					</tr>
-					<tr>
-						<th scope="row">8</th>
-						<td>EX 46</td>
-						<td>SANY 215C</td>
-						<td>DONDANG</td>
-						<td>2910</td>
-						<td>3000</td>
-						<td>90</td>
-					</tr>
-					<tr>
-						<th scope="row">9</th>
-						<td>EX 51</td>
-						<td>SANY 215C</td>
-						<td>BLORO</td>
-						<td>3592</td>
-						<td>3750</td>
-						<td>158</td>
-					</tr>
-					<tr>
-						<th scope="row">10</th>
-						<td>EX 65</td>
-						<td>XCMG 215C</td>
-						<td>BLORO</td>
-						<td>915</td>
-						<td>1000</td>
-						<td>85</td>
-					</tr>
-					<tr>
-						<th scope="row">11</th>
-						<td>EX 64</td>
-						<td>XCMG 215C</td>
-						<td>SEBULU KM3</td>
-						<td>906</td>
-						<td>1000</td>
-						<td>994</td>
-					</tr>
-					<tr>
-						<th scope="row">12</th>
-						<td>EX 55</td>
-						<td>SANY 215C</td>
-						<td>SBA,SEBULU</td>
-						<td>2240</td>
-						<td>2250</td>
-						<td class="bg-danger">10</td>
-					</tr>
-					<tr>
-						<th scope="row">13</th>
-						<td>EX 49</td>
-						<td>SANY 215 ACE</td>
-						<td>SBA,SEBULU</td>
-						<td>3090</td>
-						<td>3250</td>
-						<td>160</td>
-					</tr>
-					<tr>
-						<th scope="row">14</th>
-						<td>EX 62</td>
-						<td>XCMG 215C</td>
-						<td>SEBULU</td>
-						<td>904</td>
-						<td>1000</td>
-						<td>96</td>
-					</tr>
-					<tr>
-						<th scope="row">15</th>
-						<td>EX 63</td>
-						<td>XCMG 215C</td>
-						<td>SEBULU</td>
-						<td>883</td>
-						<td>1000</td>
-						<td>117</td>
-					</tr>
-					<tr>
-						<th scope="row">16</th>
-						<td>EX 73</td>
-						<td>ZAXIS 350</td>
-						<td class="text-danger">STAY WORKSHOP</td>
-						<td>19983</td>
-						<td>20000</td>
-						<td class="bg-danger">17</td>
-					</tr>
-					<tr>
-						<th scope="row">17</th>
+						<th scope="row">3</th>
 						<td>EX 05</td>
 						<td>ZAXIS 330</td>
 						<td>SEBULU KM7</td>
-						<td>10170</td>
+						<td>10200</td>
 						<td>10250</td>
-						<td>80</td>
+						<td class="bg-warning">50</td>
 					</tr>
 					<tr>
-						<th scope="row">18</th>
-						<td>EX 56</td>
-						<td>SANY 215C</td>
-						<td>SILKAR</td>
-						<td>3765</td>
-						<td>4000</td>
-						<td>235</td>
+						<th scope="row">4</th>
+						<td>EX 07</td>
+						<td>PC 400</td>
+						<td>--</td>
+						<td>16384</td>
+						<td>--</td>
+						<td>--</td>
 					</tr>
 					<tr>
-						<th scope="row">19</th>
-						<td>EX 67</td>
-						<td>SANY 215C</td>
-						<td>SILKAR</td>
-						<td>463</td>
-						<td>500</td>
-						<td class="bg-warning">37</td>
+						<th scope="row">5</th>
+						<td>EX 17</td>
+						<td>KOMATSU PC200</td>
+						<td>Gunung Menangis</td>
+						<td>8839</td>
+						<td>9000</td>
+						<td>161</td>
 					</tr>
 					<tr>
-						<th scope="row">20</th>
-						<td>EX 68</td>
-						<td>SANY 215C</td>
-						<td>SILKAR</td>
-						<td>606</td>
-						<td>750</td>
-						<td>144</td>
-					</tr>
-					<tr>
-						<th scope="row">21</th>
-						<td>EX 69</td>
-						<td>SANY 215C</td>
-						<td>SILKAR</td>
-						<td>415</td>
-						<td>500</td>
-						<td>85</td>
-					</tr>
-					<tr>
-						<th scope="row">22</th>
+						<th scope="row">6</th>
 						<td>EX 18</td>
 						<td>SANY 215C</td>
 						<td>L1</td>
-						<td>8175</td>
+						<td>8219</td>
 						<td>8250</td>
-						<td>75</td>
+						<td class="bg-danger">31</td>
 					</tr>
 					<tr>
-						<th scope="row">23</th>
+						<th scope="row">7</th>
+						<td>EX 20</td>
+						<td>PC300-8</td>
+						<td>SEBULU</td>
+						<td>15362</td>
+						<td>15500</td>
+						<td>138</td>
+					</tr>
+					<tr>
+						<th scope="row">8</th>
+						<td>EX 22</td>
+						<td>SANY 215C</td>
+						<td>SEBULU</td>
+						<td>7838</td>
+						<td>8000</td>
+						<td>162</td>
+					</tr>
+					<tr>
+						<th scope="row">9</th>
+						<td>EX 24</td>
+						<td>VOLVO 210D</td>
+						<td>PRANGAT</td>
+						<td>5988</td>
+						<td>6000</td>
+						<td class="bg-danger">12</td>
+					</tr>
+					<tr>
+						<th scope="row">10</th>
 						<td>EX 25</td>
 						<td>SANY 215C</td>
 						<td>MAKARTI</td>
@@ -262,52 +142,295 @@
 						<td>87</td>
 					</tr>
 					<tr>
-						<th scope="row">24</th>
-						<td>EX 36</td>
+						<th scope="row">11</th>
+						<td>EX 28</td>
 						<td>SANY 215C</td>
-						<td>MAKARTI</td>
-						<td>3966</td>
-						<td>4000</td>
+						<td>SEPAKU</td>
+						<td>5310</td>
+						<td>5500</td>
+						<td>190</td>
+					</tr>
+					<tr>
+						<th scope="row">12</th>
+						<td>EX 31</td>
+						<td>PC300-8</td>
+						<td>SEBULU</td>
+						<td>22715</td>
+						<td>22750</td>
+						<td class="bg-warning">35</td>
+					</tr>
+					<tr>
+						<th scope="row">13</th>
+						<td>EX 34</td>
+						<td>SANY 245H</td>
+						<td>SEBULU KM9</td>
+						<td>3716</td>
+						<td>3750</td>
 						<td class="bg-warning">34</td>
 					</tr>
 					<tr>
-						<th scope="row">25</th>
+						<th scope="row">14</th>
+						<td>EX 36</td>
+						<td>SANY 215C</td>
+						<td>MAKARTI</td>
+						<td>3977</td>
+						<td>4000</td>
+						<td class="bg-danger">23</td>
+					</tr>
+					<tr>
+						<th scope="row">15</th>
+						<td>EX 37</td>
+						<td>SANY 215C</td>
+						<td>JONGGON</td>
+						<td>3248</td>
+						<td>3250</td>
+						<td class="bg-danger">2</td>
+					</tr>
+					<tr>
+						<th scope="row">16</th>
 						<td>EX 41</td>
 						<td>SANY 215C</td>
 						<td>BERAMBAI</td>
-						<td>4879</td>
+						<td>4945</td>
 						<td>5000</td>
-						<td>121</td>
+						<td>55</td>
 					</tr>
 					<tr>
-						<th scope="row">25</th>
-						<td>EX 70</td>
-						<td>SANY 215C</td>
-						<td>BERAMBAI</td>
-						<td>336</td>
-						<td>500</td>
-						<td>164</td>
-					</tr>
-					<tr>
-						<th scope="row">26</th>
-						<td>DZ 09</td>
-						<td>D85SS-2</td>
-						<td class="text-danger">STAY WORKSHOP</td>
-						<td>2111</td>
-						<td>2250</td>
-						<td>139</td>
-					</tr>
-					<tr>
-						<th scope="row">27</th>
+						<th scope="row">17</th>
 						<td>EX 44</td>
 						<td>SANY 215C</td>
 						<td>L2</td>
-						<td>3174</td>
+						<td>3225</td>
 						<td>3250</td>
-						<td>76</td>
+						<td class="bg-danger">25</td>
+					</tr>
+					<tr>
+						<th scope="row">18</th>
+						<td>EX 45</td>
+						<td>SANY 215C</td>
+						<td>DONDANG</td>
+						<td>2589</td>
+						<td>2750</td>
+						<td>161</td>
+					</tr>
+					<tr>
+						<th scope="row">19</th>
+						<td>EX 46</td>
+						<td>SANY 215C</td>
+						<td>DONDANG</td>
+						<td>2965</td>
+						<td>3000</td>
+						<td class="bg-warning">35</td>
+					</tr>
+					<tr>
+						<th scope="row">20</th>
+						<td>EX 47</td>
+						<td>SANY 215C</td>
+						<td>JONGGON</td>
+						<td>3224</td>
+						<td>3250</td>
+						<td class="bg-danger">26</td>
+					</tr>
+					<tr>
+						<th scope="row">21</th>
+						<td>EX 48</td>
+						<td>SANY 215ACE</td>
+						<td>JONGGON</td>
+						<td>4689</td>
+						<td>4750</td>
+						<td>61</td>
+					</tr>
+					<tr>
+						<th scope="row">22</th>
+						<td>EX 49</td>
+						<td>SANY 215 ACE</td>
+						<td>SBA,SEBULU</td>
+						<td>2272</td>
+						<td>2522</td>
+						<td>250</td>
+					</tr>
+					<tr>
+						<th scope="row">23</th>
+						<td>EX 50</td>
+						<td>SANY 245H</td>
+						<td>SEBULU KM9</td>
+						<td>2241</td>
+						<td>2250</td>
+						<td class="bg-danger">9</td>
+					</tr>
+					<tr>
+						<th scope="row">24</th>
+						<td>EX 51</td>
+						<td>SANY 215C</td>
+						<td>BLORO</td>
+						<td>3620</td>
+						<td>3750</td>
+						<td>130</td>
+					</tr>
+					<tr>
+						<th scope="row">25</th>
+						<td>EX 52</td>
+						<td>SANY 215C</td>
+						<td>SEBULU</td>
+						<td>2684</td>
+						<td>2750</td>
+						<td>66</td>
+					</tr>
+					<tr>
+						<th scope="row">26</th>
+						<td>EX 53</td>
+						<td>SANY 215C</td>
+						<td>L4 KAYU MATI</td>
+						<td>2800</td>
+						<td>3000</td>
+						<td>200</td>
+					</tr>
+					<tr>
+						<th scope="row">27</th>
+						<td>EX 54</td>
+						<td>SANY 215C</td>
+						<td>Gunung Menangis</td>
+						<td>2044</td>
+						<td>2250</td>
+						<td>206</td>
 					</tr>
 					<tr>
 						<th scope="row">28</th>
+						<td>EX 55</td>
+						<td>SANY 215C</td>
+						<td>SBA,SEBULU</td>
+						<td>3123</td>
+						<td>2250</td>
+						<td>127</td>
+					</tr>
+					<tr>
+						<th scope="row">29</th>
+						<td>EX 56</td>
+						<td>SANY 215C</td>
+						<td>SILKAR</td>
+						<td>3820</td>
+						<td>4000</td>
+						<td>180</td>
+					</tr>
+					<tr>
+						<th scope="row">30</th>
+						<td>EX 57</td>
+						<td>SANY 365H-3</td>
+						<td>SEBULU</td>
+						<td>3100</td>
+						<td>3250</td>
+						<td>150</td>
+					</tr>
+					<tr>
+						<th scope="row">31</th>
+						<td>EX 58</td>
+						<td>SANY 365H-3</td>
+						<td>MELAK</td>
+						<td>4627</td>
+						<td>4750</td>
+						<td>123</td>
+					</tr>
+					<tr>
+						<th scope="row">32</th>
+						<td>EX 62</td>
+						<td>XCMG 215C</td>
+						<td>SEBULU</td>
+						<td>964</td>
+						<td>1000</td>
+						<td class="bg-warning">36</td>
+					</tr>
+					<tr>
+						<th scope="row">33</th>
+						<td>EX 63</td>
+						<td>XCMG 215C</td>
+						<td>SEBULU</td>
+						<td>942</td>
+						<td>1000</td>
+						<td>58</td>
+					</tr>
+					<tr>
+						<th scope="row">34</th>
+						<td>EX 64</td>
+						<td>XCMG 215C</td>
+						<td>SEBULU KM3</td>
+						<td>914</td>
+						<td>1000</td>
+						<td>86</td>
+					</tr>
+					<tr>
+						<th scope="row">35</th>
+						<td>EX 65</td>
+						<td>XCMG 215C</td>
+						<td>BLORO</td>
+						<td>966</td>
+						<td>1000</td>
+						<td class="bg-danger">34</td>
+					</tr>
+					<tr>
+						<th scope="row">36</th>
+						<td>EX 67</td>
+						<td>SANY 215C</td>
+						<td>SILKAR</td>
+						<td>463</td>
+						<td>500</td>
+						<td class="bg-warning">37</td>
+					</tr>
+					<tr>
+						<th scope="row">37</th>
+						<td>EX 68</td>
+						<td>SANY 215C</td>
+						<td>SILKAR</td>
+						<td>663</td>
+						<td>750</td>
+						<td>87</td>
+					</tr>
+					<tr>
+						<th scope="row">38</th>
+						<td>EX 69</td>
+						<td>SANY 215C</td>
+						<td>SILKAR</td>
+						<td>460</td>
+						<td>500</td>
+						<td class="bg-warning">40</td>
+					</tr>
+					<tr>
+						<th scope="row">39</th>
+						<td>EX 70</td>
+						<td>SANY 215C</td>
+						<td>BERAMBAI</td>
+						<td>392</td>
+						<td>500</td>
+						<td>108</td>
+					</tr>
+					<tr>
+						<th scope="row">40</th>
+						<td>EX 71</td>
+						<td>LIUGONG 920E</td>
+						<td>Gunung Menangis</td>
+						<td>338</td>
+						<td>500</td>
+						<td>162</td>
+					</tr>
+					<tr>
+						<th scope="row">41</th>
+						<td>EX 72</td>
+						<td>CAT 320D2</td>
+						<td>SEPAKU</td>
+						<td>8830</td>
+						<td>9000</td>
+						<td>170</td>
+					</tr>
+					<tr>
+						<th scope="row">42</th>
+						<td>EX 73</td>
+						<td>ZAXIS 350</td>
+						<td class="text-danger">STAY WORKSHOP</td>
+						<td>19983</td>
+						<td>20000</td>
+						<td class="bg-danger">17</td>
+					</tr>
+					<tr>
+						<th scope="row">43</th>
 						<td>EX 74</td>
 						<td>LIUGONG 920E</td>
 						<td>L2</td>
@@ -316,26 +439,94 @@
 						<td>168</td>
 					</tr>
 					<tr>
-						<th scope="row">29</th>
+						<th scope="row">44</th>
+						<td>EX 75</td>
+						<td>LIUGONG 920E</td>
+						<td>PRANGAT</td>
+						<td>370</td>
+						<td>500</td>
+						<td>130</td>
+					</tr>
+					<tr>
+						<th scope="row">45</th>
 						<td>EX 76</td>
 						<td>SANY 215C</td>
 						<td>MAKARTI</td>
-						<td>57</td>
+						<td>191</td>
 						<td>250</td>
-						<td>193</td>
+						<td>59</td>
 					</tr>
 					<tr>
-						<th scope="row">30</th>
-						<td>EX 22</td>
-						<td>SANY 215C</td>
+						<th scope="row">46</th>
+						<td>EX 77</td>
+						<td>SANY 215ACE</td>
+						<td>SEBULU KM9</td>
+						<td>85</td>
+						<td>250</td>
+						<td>165</td>
+					</tr>
+					<tr>
+						<th scope="row">47</th>
+						<td>EX 79</td>
+						<td>SANY 215ACE</td>
+						<td>SEPAKU</td>
+						<td>48</td>
+						<td>250</td>
+						<td>202</td>
+					</tr>
+					<tr>
+						<th scope="row">48</th>
+						<td>EX 80</td>
+						<td>SANY 215ACE</td>
+						<td>SEPAKU</td>
+						<td>77</td>
+						<td>250</td>
+						<td>173</td>
+					</tr>
+					<tr>
+						<th scope="row">49</th>
+						<td>DZ 01</td>
+						<td>D85SS-2</td>
+						<td>SEBULU KM9</td>
+						<td>8174</td>
+						<td>8250</td>
+						<td>76</td>
+					</tr>
+					<tr>
+						<th scope="row">50</th>
+						<td>DZ 09</td>
+						<td>D85SS-2</td>
+						<td class="text-danger">STAY WORKSHOP</td>
+						<td>2111</td>
+						<td>2250</td>
+						<td>139</td>
+					</tr>
+					<tr>
+						<th scope="row">51</th>
+						<td>DZ 10</td>
+						<td>D85SS-2</td>
 						<td>SEBULU</td>
-						<td>7822</td>
-						<td>8000</td>
-						<td>178</td>
+						<td>457</td>
+						<td>500</td>
+						<td>43</td>
+					</tr>
+					<tr>
+						<th scope="row">52</th>
+						<td>DZ 11</td>
+						<td>D85SS-2</td>
+						<td>SEPAKU</td>
+						<td>1640</td>
+						<td>1750</td>
+						<td>110</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+		<footer id="footer">
+			<div class="container text-white fs-6">
+				<small>Copyright &copy; 2021 - <a href="https://www.instagram.com/erlaan_128/" target="_blank" rel="noopener noreferrer">Erlan Ganteng</a></small>
+			</div>
+		</footer>
 
 		<!-- Optional JavaScript; choose one of the two! -->
 
