menambah isi table unit ex 78

--- a/rentalan.html
+++ b/rentalan.html
@@ -165,8 +165,8 @@
 						<td>SANY 245H</td>
 						<td>SEBULU KM9</td>
 						<td>3716</td>
-						<td>3750</td>
-						<td class="bg-warning">34</td>
+						<td>3881</td>
+						<td>165</td>
 					</tr>
 					<tr>
 						<th scope="row">14</th>
@@ -452,9 +452,9 @@
 						<td>EX 76</td>
 						<td>SANY 215C</td>
 						<td>MAKARTI</td>
-						<td>191</td>
+						<td>228</td>
 						<td>250</td>
-						<td>59</td>
+						<td class="bg-danger">22</td>
 					</tr>
 					<tr>
 						<th scope="row">46</th>
@@ -467,6 +467,16 @@
 					</tr>
 					<tr>
 						<th scope="row">47</th>
+						<td>EX 78</td>
+						<td>SANY 215ACE</td>
+						<td>L3</td>
+						<td>38</td>
+						<td>250</td>
+						<td>212</td>
+					</tr>
+
+					<tr>
+						<th scope="row">48</th>
 						<td>EX 79</td>
 						<td>SANY 215ACE</td>
 						<td>SEPAKU</td>
@@ -475,7 +485,7 @@
 						<td>202</td>
 					</tr>
 					<tr>
-						<th scope="row">48</th>
+						<th scope="row">49</th>
 						<td>EX 80</td>
 						<td>SANY 215ACE</td>
 						<td>SEPAKU</td>
@@ -484,7 +494,7 @@
 						<td>173</td>
 					</tr>
 					<tr>
-						<th scope="row">49</th>
+						<th scope="row">50</th>
 						<td>DZ 01</td>
 						<td>D85SS-2</td>
 						<td>SEBULU KM9</td>
@@ -493,7 +503,7 @@
 						<td>76</td>
 					</tr>
 					<tr>
-						<th scope="row">50</th>
+						<th scope="row">51</th>
 						<td>DZ 09</td>
 						<td>D85SS-2</td>
 						<td class="text-danger">STAY WORKSHOP</td>
@@ -502,7 +512,7 @@
 						<td>139</td>
 					</tr>
 					<tr>
-						<th scope="row">51</th>
+						<th scope="row">52</th>
 						<td>DZ 10</td>
 						<td>D85SS-2</td>
 						<td>SEBULU</td>
@@ -511,7 +521,7 @@
 						<td>43</td>
 					</tr>
 					<tr>
-						<th scope="row">52</th>
+						<th scope="row">53</th>
 						<td>DZ 11</td>
 						<td>D85SS-2</td>
 						<td>SEPAKU</td>
